Fix layout bugs (#10)
* Fix width overflow
* Fix back button
* Use spinner instead of Loading text

--- a/src/frontend/src/FillBar.css
+++ b/src/frontend/src/FillBar.css
@@ -1,5 +1,5 @@
 .fillBar {
-    width: 100%;
+    width: calc(100% - 5px);
     height: 1em;
     background-color: beige;
 }
